# minkipc

./: .gitmodules  Android.bp  CMakeLists.txt  README.md
.github/actions/build_minkipc/: action.yml
.github/actions/build_qcbor/: action.yml
.github/actions/build_quic-teec/: action.yml
.github/actions/loading/: action.yml
.github/actions/pull_docker_image/: action.yml
.github/actions/sync/: action.yml
.github/workflows/: loading.yml  pre_merge.yml  quic-organization-repolinter.yml  run_armor.yml  sync_build.yml
ci/: build.sh
libmink/: README.md
libmink/Credentials/: Android.bp  CMakeLists.txt  Makefile
libmink/Credentials/inc/: HexUtils.h  MinkTypes.h  osIndCredentials.h
libmink/Credentials/src/: osIndCredentials.c
libmink/Hub/: Makefile.am  configure.ac
libmink/Hub/ExampleHub/: Android.bp  Makefile
libmink/Hub/ExampleHub/inc/: CRegisterModule_open.h  MinkHub.h  MinkHubLogging.h  ServiceManager.h  ServiceModuleOpener.h  ServiceOpener.h
libmink/Hub/ExampleHub/src/: CRegisterModule.cpp  ExampleHub.cpp  ExampleHubLegacy.cpp  MinkHub.cpp  ServiceManager.cpp  ServiceModuleOpener.cpp  ServiceOpener.cpp  VMCredentials.cpp
libmink/Hub/MinkHub/: Android.mk  Makefile
libmink/Hub/MinkHub/inc/: ConnectionManager.h  IDSet.h  MinkHubUtils.h
libmink/Hub/MinkHub/interface/: MinkHub.h
libmink/Hub/MinkHub/src/: ConnectionManager.c  MinkHub.c  MinkHubUtils.c
libmink/SDK/: Android.mk
libmink/SDK/QTVM/: Build.py  Makefile  SecureAppMetadata.py  minkidl
libmink/SDK/QTVM/clang_format/: ABC.clang-format  README.org  do_clang_format.py
libmink/SDK/QTVM/idl/: Android.bp  CAllPrivilegeTestService.idl  CAppClient.idl  CAppLoader.idl  CC2PAInternetService.idl  CCommonTestService.idl  CConfirmationToken.idl  CCredDealerTestService.idl  CDemuraTnService.idl  CDeviceID.idl  CEmbeddedAllPrivilegeTestService.idl  CEmbeddedCommonTestService.idl  CEmbeddedIPPTestApp.idl  CEmbeddedLateRegistration.idl  CEmbeddedMissingNeverUnload.idl  CEmbeddedNormalDeathTestService.idl  CEmbeddedSpareTestService.idl  CEmbeddedStressTestService.idl  CEmbeddedTVMSMCInvokeTestApp.idl  CEmbeddedWrongTestService.idl  CHLOSPlatformEnv.idl  CIDVService.idl  CIPPService.idl  CKMHal.idl  CKVStore.idl  CLateRegistration.idl  CMinkdRegister.idl  COEMVMPlatformInfo.idl  CQTVMPlatformInfo.idl  CQWESTAServices.idl  CSampleService.idl  CSecureDSPService.idl  CSecureImage.idl  CSecureIndicator.idl  CSecureIndicatorApp.idl  CSpareTestService.idl  CStressTestService.idl  CTAccessControl.idl  CTC2PAService.idl  CTCDriverCBService.idl  (+76 more)
libmink/SDK/QTVM/inc/: TUtils.h  heap.h  heap_port.h  impl_base.hpp  proxy_base.hpp  strlcpy.h
libmink/SDK/QTVM/sampleCA/: Android.mk  Makefile
libmink/SDK/QTVM/sampleapp/: build.json
libmink/SDK/QTVM/sampleapp_cpp/: build.json
libmink/SDK/QTVM/unittest/: BuildUnitTest.py  CMetadataTestAnoPrivilege.idl  CMetadataTestAnoService.idl  CMetadataTestPrivilege.idl  CMetadataTestService.idl  MetadataUnitTest.py
libmink/Transport/: Android.bp  Makefile.am  configure.ac  mink-transport.pc.in
libmink/Transport/FdWrapper/: Android.bp  Makefile
libmink/Transport/FdWrapper/interface/: fdwrapper.h
libmink/Transport/FdWrapper/src/: fdwrapper.c
libmink/Transport/MinkSocket/: Android.bp  Makefile
libmink/Transport/MinkSocket/ext/: itoa.c  strlcpy.c
libmink/Transport/MinkSocket/idl/: IConfinement.idl
libmink/Transport/MinkSocket/include/: Heap.h  Types.h  cdefs.h  check.h  heap.h  heap_port.h  libqrtr.h  logging.h  lxcom_sock.h  qtest.h  vmuuid.h
libmink/Transport/MinkSocket/kernel/: kdefs.h  qlist.h
libmink/Transport/MinkSocket/rust/: close_notifier.rs  ffi.rs  minkipc.rs
libmink/Transport/MinkSocket/sock/: CloseNotifier.c  CloseNotifier.h  CredentialsAdapter.c  CredentialsAdapter.h  LinkCredentials.c  LinkCredentials.h  Marshalling.c  Marshalling.h  ObjectTable.c  ObjectTable.h  ObjectTableMT.h  Primordial.c  Primordial.h  Profiling.c  Profiling.h  SockAgnostic.c  SockAgnostic.h  SockQMSGQ.c  SockQMSGQ.h  SockQRTR.c  SockQRTR.h  SockUNIX.c  SockUNIX.h  SockVSOCK.c  SockVSOCK.h  ThreadPool.c  ThreadPool.h  Utils.c  Utils.h  VmOsal.h  minkipc.c  minkipc.h  minksocket.c  minksocket.h  (+4 more)
libmink/Transport/TZCom/: Android.bp  Makefile.am  configure.ac
libmink/common/: Android.bp
libmink/common/rust/: lib.rs
libmink/config/: Android.mk  ta_config.json
libminkadaptor/src/: mink_adaptor.c  mink_adaptor_priv.h
libminkadaptor/tests/smcinvoke_client/: CMakeLists.txt
libminkadaptor/tests/smcinvoke_client/include/: tzt.h
libminkadaptor/tests/smcinvoke_client/src/: smcinvoke_client.cpp
libminkteec/src/: CWait.c
listeners/libfsservice/cmn/: cmn.h  helper.c
listeners/libfsservice/fs/: CMakeLists.txt  fs_main.c  fs_msg.h
listeners/libfsservice/gpfs/: CMakeLists.txt  gpfs_main.c  gpfs_msg.h
listeners/libtaautoload/src/: CRequestTABuffer.cpp  CRequestTABuffer.h  TaAutoLoad.cpp
listeners/libtimeservice/: CMakeLists.txt  atime.c  time_msg.h
listeners/listenercbo/: CMakeLists.txt
listeners/listenercbo/include/: CListenerCBO.h
listeners/listenercbo/src/: CListenerCBO.c
mink_platform/: Android.mk  README.md
mink_platform/HLOS/minkdaemon/: Android.mk  Makefile  hlosminkdaemon.rc
mink_platform/QTVM/: Makefile
mink_platform/mink_test/: Android.mk  Makefile.am  configure.ac
mink_platform/mink_test/config/: mink_internal_vendor_product.mk
mink_platform/mink_test/minktransport_test/: Makefile
mink_platform/mink_test/qtvm_test/: Android.mk  Makefile  README.org  qtvm_test.yaml  run_test.sh
optee-client/: CMakeLists.txt
optee-test/: CMakeLists.txt
public_headers/: config.yaml  config.yml
qtee_supplicant/: CMakeLists.txt  qteesupplicant.service.in  sfs_config.in  sfs_config_omit_persist.in  sfsconfig.service.in
qtee_supplicant/src/: listener_mngr.c  listener_mngr.h
ta/qcm6490/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn  tzecotestapp.mbn
ta/qcs615/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn
ta/qcs8300/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn  tzecotestapp.mbn
ta/qcs9100/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn  tzecotestapp.mbn
(+269 files in other folders)
